solution/app/todos-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-api
      redis-access: "true"
  template:
    metadata:
      labels:
        app: todos-api
        redis-access: "true"
    spec:
      containers:
      - image: 561341012850.dkr.ecr.us-east-1.amazonaws.com/team62-todos-api
        name: todos-api
        ports:
        - containerPort: 8082
          name: tport
      restartPolicy: Always
